second-Time update code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="script.js"></script>
+    <button onclick="getSetps()">Go step by step</button>
+    <script src="./script.js"  >
+   
+      
+    </script>
   </body>
 </html>
